# lab_OP_18

./: CMakeLists.txt  main.c
string/: string_.c  string_.h
string/tasks/: getIdenticalStringInSize.h  numberOfPalindromes.h  removePalindromesSequenceRepeating_characters.h  replaceWord.h  reverseDigitsWithWords.h  reversePrint.h
